# librertc-client

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
librertc-net-service/: README.md  go.mod  go.sum
librertc-net-service/cmd/librertc-net-service/: main.go
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/assets/fonts/: COPYRIGHT.txt
